fixed overflowing fonts

--- a/styles/index.css
+++ b/styles/index.css
@@ -253,7 +253,15 @@ article .text-window h1{
 }
 article .text-window p{
    font-size: 1rem;
-   margin: .5% auto;
+   margin: 2% auto;
+   width: 95%;
+   height: 78%;
+   text-align: center;
+
+}
+article .text-window ul{
+   font-size: 1rem;
+   margin: 2% auto;
    width: 95%;
    height: 78%;
    text-align: center;
